feat: 为 ScrollText 两侧添加淡出效果